[package]
name = "morf-mqtt-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
bundled-sqlite = ["rusqlite/bundled"]

[dependencies]
anyhow = "1"
base64 = "0.21"
blocking = "1"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
constant_time_eq = "0.3"
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
futures = "0.3"
mini-moka = "0.10"
monoio = { version = "0.2", features = ["sync"] }
monoio-rustls = "0.3"
morf = "0.2"
mqttrs = "0.4"
once_cell = "1"
rand = "0.8"
rusqlite = "0.30"
rusqlite_migration = "1"
rustls = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
serde_yaml = "0.9"
webpki-roots = "0.26"
x25519-dalek = { version = "2", default-features = false }
